Lab/Code/syntax.output
Terminals unused in grammar

    NEG


State 28 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | ε

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: Stmt StmtList
   28         | ε

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI

   36 DefList: Def DefList
   37        | ε

   38 Def: Specifier DecList SEMI
   39    | error SEMI

   40 DecList: Dec
   41        | Dec COMMA DecList

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp AND Exp
   46    | Exp OR Exp
   47    | Exp RELOP Exp
   48    | Exp PLUS Exp
   49    | Exp MINUS Exp
   50    | Exp STAR Exp
   51    | Exp DIV Exp
   52    | LP Exp RP
   53    | MINUS Exp
   54    | NOT Exp
   55    | ID LP Args RP
   56    | ID LP RP
   57    | Exp LB Exp RB
   58    | Exp DOT ID
   59    | ID
   60    | INT
   61    | FLOAT

   62 Args: Exp COMMA Args
   63     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 21 26 35 39
    INT <type_int> (258) 18 60
    FLOAT <type_float> (259) 61
    ID (260) 14 16 17 19 20 55 56 58 59
    SEMI (261) 4 5 7 29 31 35 38 39
    COMMA (262) 9 22 41 62
    ASSIGNOP (263) 43 44
    RELOP (264) 47
    PLUS (265) 48
    MINUS (266) 49 53
    STAR (267) 50
    DIV (268) 51
    AND (269) 45
    OR (270) 46
    DOT (271) 58
    NOT (272) 54
    TYPE (273) 10
    LP (274) 19 20 32 33 34 52 55 56
    RP (275) 19 20 21 32 33 34 52 55 56
    LB (276) 18 57
    RB (277) 18 57
    LC (278) 12 25
    RC (279) 12 25 26
    STRUCT (280) 12 13
    RETURN (281) 31
    IF (282) 32 33
    ELSE (283) 33
    WHILE (284) 34
    NEG (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <type_double> (33)
        on left: 1
        on right: 0
    ExtDefList <type_double> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <type_double> (35)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <type_double> (36)
        on left: 8 9
        on right: 4 9
    Specifier <type_double> (37)
        on left: 10 11
<<<<<<< HEAD
        on right: 4 5 6 26 40
    StructSpecifier <type_double> (38)
        on left: 12 13 14
        on right: 11
    OptTag <type_double> (39)
        on left: 15 16
        on right: 12
    Tag <type_double> (40)
        on left: 17
=======
        on right: 4 5 6 24 38
    StructSpecifier (38)
        on left: 12 13
        on right: 11
    OptTag (39)
        on left: 14 15
        on right: 12
    Tag (40)
        on left: 16
>>>>>>> 6167a60366b5123f99de96992d6be4d8a38646cd
        on right: 13
    VarDec (41)
        on left: 17 18
        on right: 8 9 18 24 42 43
    FunDec (42)
        on left: 19 20 21
        on right: 6
    VarList (43)
        on left: 22 23
        on right: 19 22
    ParamDec (44)
<<<<<<< HEAD
        on left: 26
        on right: 24 25
    CompSt <type_double> (45)
        on left: 27 28
        on right: 6 32
    StmtList <type_double> (46)
        on left: 29 30
        on right: 27 29
    Stmt <type_double> (47)
        on left: 31 32 33 34 35 36 37
        on right: 29 34 35 36
    DefList <type_double> (48)
        on left: 38 39
        on right: 12 27 38
    Def <type_double> (49)
        on left: 40 41
        on right: 38
    DecList <type_double> (50)
        on left: 42 43
        on right: 40 43
    Dec <type_double> (51)
        on left: 44 45
        on right: 42 43
    Exp <type_double> (52)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 31 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55 56 59 60 64 65
    Args <type_double> (53)
        on left: 64 65
        on right: 57 64
=======
        on left: 24
        on right: 22 23
    CompSt (45)
        on left: 25 26
        on right: 6 30
    StmtList (46)
        on left: 27 28
        on right: 25 27
    Stmt (47)
        on left: 29 30 31 32 33 34 35
        on right: 27 32 33 34
    DefList (48)
        on left: 36 37
        on right: 12 25 36
    Def (49)
        on left: 38 39
        on right: 36
    DecList (50)
        on left: 40 41
        on right: 38 41
    Dec (51)
        on left: 42 43
        on right: 40 41
    Exp (52)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 29 31 32 33 34 43 44 45 46 47 48 49 50 51 52 53 54 57 58 62 63
    Args (53)
        on left: 62 63
        on right: 55 62
>>>>>>> 6167a60366b5123f99de96992d6be4d8a38646cd


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE •

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT • OptTag LC DefList RC
   13                | STRUCT • Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier •

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID •
   16 Tag: ID •

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 15

   21 FunDec: error • RP

    RP  shift, and go to state 22


State 16

   17 VarDec: ID •
   19 FunDec: ID • LP VarList RP
   20       | ID • LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec •
    9           | VarDec • COMMA ExtDecList
   18 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 21

   12 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 37 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   21 FunDec: error RP •

    $default  reduce using rule 21 (FunDec)


State 23

   19 FunDec: ID LP • VarList RP
   20       | ID LP • RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 26

   18 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 40


State 27

   26 CompSt: error • RC

    RC  shift, and go to state 41


State 28

   25 CompSt: LC • DefList StmtList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 37 (DefList)]
    INT     reduce using rule 37 (DefList)
    FLOAT   reduce using rule 37 (DefList)
    ID      reduce using rule 37 (DefList)
    MINUS   reduce using rule 37 (DefList)
    NOT     reduce using rule 37 (DefList)
    LP      reduce using rule 37 (DefList)
    LC      reduce using rule 37 (DefList)
    RC      reduce using rule 37 (DefList)
    RETURN  reduce using rule 37 (DefList)
    IF      reduce using rule 37 (DefList)
    WHILE   reduce using rule 37 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 33


State 29

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 30

   39 Def: error • SEMI

    SEMI  shift, and go to state 43


State 31

   38 Def: Specifier • DecList SEMI

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 32

   12 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 47


State 33

   36 DefList: Def • DefList

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 37 (DefList)]
    INT     reduce using rule 37 (DefList)
    FLOAT   reduce using rule 37 (DefList)
    ID      reduce using rule 37 (DefList)
    MINUS   reduce using rule 37 (DefList)
    NOT     reduce using rule 37 (DefList)
    LP      reduce using rule 37 (DefList)
    LC      reduce using rule 37 (DefList)
    RC      reduce using rule 37 (DefList)
    RETURN  reduce using rule 37 (DefList)
    IF      reduce using rule 37 (DefList)
    WHILE   reduce using rule 37 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 33


State 34

   20 FunDec: ID LP RP •

    $default  reduce using rule 20 (FunDec)


State 35

   24 ParamDec: Specifier • VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


State 36

   19 FunDec: ID LP VarList • RP

    RP  shift, and go to state 50


State 37

   22 VarList: ParamDec • COMMA VarList
   23        | ParamDec •

    COMMA  shift, and go to state 51

    $default  reduce using rule 23 (VarList)


State 38

   17 VarDec: ID •

    $default  reduce using rule 17 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 40

   18 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 52


State 41

   26 CompSt: error RC •

    $default  reduce using rule 26 (CompSt)


State 42

   25 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 28
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 43

   39 Def: error SEMI •

    $default  reduce using rule 39 (Def)


State 44

   18 VarDec: VarDec • LB INT RB
   42 Dec: VarDec •
   43    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 26

    $default  reduce using rule 42 (Dec)


State 45

   38 Def: Specifier DecList • SEMI
